Fix search text not aligning on bar

--- a/static/stylesheets/override.css
+++ b/static/stylesheets/override.css
@@ -50,7 +50,8 @@
 }
 
 .title {
-  padding-top: 15px !important;
+    padding-top: 15px !important;
+    font-weight: bold;
 }
 
 .header {
@@ -59,7 +60,7 @@
 }
 
 .bar.search {
-    margin-top: -13px;
+    margin-top: -12px;
 }
 
 .stretch {
@@ -71,7 +72,16 @@
 }
 
 .button .icon {
-    margin: 13px;
+    margin: 10px;
+    padding: 0;
+}
+
+div.button.button-close {
+    padding-top: 13px;
+}
+
+.field {
+    padding-top 1px;
 }
 
 /* Sidebar stuff */
